--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>AKGEC Question Paper Management</h1>
+        <h1>AKGEC Question PaperS</h1>
     </header>
     <div class="container">
         <div class="semester-select">
@@ -31,7 +31,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; 2025 AKGEC</p>
+        <p>&copy; 2025 AKASH (CSIT)</p>
     </footer>
     <div class="quote" id="quote"></div>
     <script src="script.js"></script>
