--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; 2025 AKASH (CSIT)</p>
+        <p>&copy; AKASH(CSIT)'28</p>
     </footer>
     <div class="quote" id="quote"></div>
     <script src="script.js"></script>
