--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>AKGEC Question PaperS</h1>
+        <h1>AKGEC Question Papers</h1>
     </header>
     <div class="container">
         <div class="semester-select">
