--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; 2025 AKGEC</p>
+        <p>&copy;Akash CSIT'28</p>
     </footer>
     <div class="quote" id="quote"></div>
 
