--- a/index.html
+++ b/index.html
@@ -222,7 +222,15 @@
             "The future belongs to those who prepare for it today.",
             "Success is not final, failure is not fatal: It is the courage to continue that counts.",
             "Education is the most powerful weapon which you can use to change the world.",
-            "Don’t watch the clock; do what it does. Keep going."
+            "Don’t watch the clock; do what it does. Keep going.",
+             "Life is never easy. There is work to be done and obligations to be met – obligations to truth, to justice, and to liberty.",
+            "The only impossible journey is the one you never begin.",
+            "The only way to do great work is to love what you do.",
+            "The best way to predict the future is to create it.",
+            "The future belongs to those who believe in the beauty of their dreams.",
+            "The only limit to our realization of tomorrow will be our doubts of today.",
+            "The future belongs to those who believe in the beauty of their dreams.",   
+            "The only limit to our realization of tomorrow will be our doubts of today.",
         ];
 
         function renderQuestions(semester) {
