--- a/index.html
+++ b/index.html
@@ -47,14 +47,24 @@
     <title>Question Paper Management</title>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <style>
-        body {
+        /* body {
             margin: 0;
             font-family: Arial, sans-serif;
             background: linear-gradient(135deg, #141e30, #243b55);
             color: #f0f0f0;
+        } /*normal BG*/
+
+        /*  body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: radial-gradient(circle, rgba(0, 0, 0, 0.8), #0f0c29, #302b63, #24243e);
+            color: #f0f0f0;
+            box-shadow: 0px 0px 50px rgba(0, 255, 255, 0.5);
         }
 
-        header {
+        /*NEON BG*/
+
+        /* header {
             text-align: center;
             padding: 20px;
             background: rgba(0, 0, 0, 0.5);
@@ -152,11 +162,94 @@
                 top: 10px;
                 bottom: unset;
             }
+        }*/
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #f0f0f0;
+            overflow: auto;
+            /* Allows scrolling */
+            height: 100vh;
+
+        }
+
+        /* Background Video Styling */
+        .bg-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+
+        /* Glassmorphism Effect */
+        .container {
+            max-width: 1200px;
+            margin: 50px auto;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(12px);
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            text-align: center;
+            min-height: 100vh;
+            /* Ensures space for scrolling */
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(8px);
+        }
+
+        select {
+            padding: 12px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            outline: none;
+            background: rgba(255, 255, 255, 0.2);
+            color: #f0f0f0;
+        }
+
+        .question-list li {
+            margin: 10px 0;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            transition: transform 0.3s ease;
+        }
+
+        .question-list li:hover {
+            transform: scale(1.02);
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Quote Styling */
+        .quote {
+            position: fixed;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px 20px;
+            border-radius: 8px;
+            color: #f0f0f0;
+            font-size: 14px;
+            text-align: center;
+            z-index: 10;
         }
     </style>
 </head>
 
 <body>
+    <!-- <div class="stars"></div> -->
+    <video class="bg-video" src="bg.mp4" autoplay loop muted></video>
+
     <header>
         <h1>AKGEC Question Paper Management</h1>
     </header>
@@ -174,6 +267,7 @@
                 <option value="8">Semester 8</option>
             </select>
         </div>
+
         <ul class="question-list">
             <!-- Dynamic content will be inserted here -->
         </ul>
@@ -223,13 +317,13 @@
             "Success is not final, failure is not fatal: It is the courage to continue that counts.",
             "Education is the most powerful weapon which you can use to change the world.",
             "Don’t watch the clock; do what it does. Keep going.",
-             "Life is never easy. There is work to be done and obligations to be met – obligations to truth, to justice, and to liberty.",
+            "Life is never easy. There is work to be done and obligations to be met – obligations to truth, to justice, and to liberty.",
             "The only impossible journey is the one you never begin.",
             "The only way to do great work is to love what you do.",
             "The best way to predict the future is to create it.",
             "The future belongs to those who believe in the beauty of their dreams.",
             "The only limit to our realization of tomorrow will be our doubts of today.",
-            "The future belongs to those who believe in the beauty of their dreams.",   
+            "The future belongs to those who believe in the beauty of their dreams.",
             "The only limit to our realization of tomorrow will be our doubts of today.",
         ];
 
