--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
             text-align: center;
             z-index: 10;
         }
+        footer {
+            text-align: center;
+            padding: 15px;
+            background: rgba(0, 0, 0, 0.8);
+            position: relative;
+            width: 100%;
+            bottom: 0;
+
+        }
     </style>
 </head>
 
@@ -273,7 +282,10 @@
         </ul>
     </div>
     <footer>
-        <p>&copy;Akash CSIT'28</p>
+        <a
+            href="https://www.linkedin.com/in/akash-kumar-b98393286?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            <p>&copy;Akash CSIT'28</p>
+        </a>
     </footer>
     <div class="quote" id="quote"></div>
 
