--- a/index.html
+++ b/index.html
@@ -299,21 +299,26 @@
 
         const questions = {
             1: [
-                { title: 'Electronics ST1', link: 'Electronics st1.pdf' },
+               { title: 'Electronics ST1', link: 'Electronics st1.pdf' },
                 { title: 'Electronics ST2', link: 'Electronics st2.pdf' },
                 { title: 'Electronics PUT', link: 'Electronics put.pdf' },
+                { title: 'Electronics UT', link: 'Electronics ut.pdf' },
                 { title: 'Chemistry ST1', link: 'Chemistry st1.pdf' },
                 { title: 'Chemistry ST2', link: 'Chemistry st2.pdf' },
                 { title: 'Chemistry PUT', link: 'Chemistry put.pdf' },
+                { title: 'Chemistry UT', link: 'Chemistry ut.pdf' },
                 { title: 'Maths ST1', link: 'Maths st1.pdf' },
                 { title: 'Maths ST2', link: 'Maths st2.pdf' },
                 { title: 'Maths PUT', link: 'Maths put.pdf' },
+                { title: 'Maths UT', link: 'Maths ut.pdf' },
                 { title: 'Mechanical ST1', link: 'Mechanical st1.pdf' },
                 { title: 'Mechanical ST2', link: 'Mechanical st2.pdf' },
                 { title: 'Mechanical PUT', link: 'Mechanical put.pdf' },
+                { title: 'Mechanical UT', link: 'Mechanical ut.pdf' },
                 { title: 'Softskills ST1', link: 'Softskills st1.pdf' },
                 { title: 'Softskills ST2', link: 'Softskills st2.pdf' },
                 { title: 'Softskills PUT', link: 'Softskills put.pdf' },
+                { title: 'Softskills UT', link: 'Softskills ut.pdf' },
 
 
             ],
