--- a/index.html
+++ b/index.html
@@ -323,8 +323,11 @@
 
             ],
             2: [
-                { title: 'Mathematics II', link: 'path/to/mathematics2.pdf' },
-                { title: 'Chemistry', link: 'path/to/chemistry.pdf' }
+               { title: 'Mathematics II ST1', link: 'Math2 st1.pdf' },
+                { title: 'Electrical ST1', link: 'Electrical st1.pdf' },
+                { title: 'PPS ST1', link: 'pps st1.pdf' },
+                { title: 'Physics ST1', link: 'Physics st1.pdf' },
+                { title: 'Ecology ST1', link: 'Ecology st1.pdf' },
             ],
             // Add other semesters
         };
