--- a/index.html
+++ b/index.html
@@ -324,10 +324,15 @@
             ],
             2: [
                { title: 'Mathematics II ST1', link: 'Math2 st1.pdf' },
+                { title: 'Mathematics II ST2', link: 'Math2 st2.pdf' },
                 { title: 'Electrical ST1', link: 'Electrical st1.pdf' },
+                { title: 'Electrical ST2', link: 'Electrical st2.pdf' },
                 { title: 'PPS ST1', link: 'pps st1.pdf' },
+                { title: 'PPS ST2', link: 'pps st2.pdf' },
                 { title: 'Physics ST1', link: 'Physics st1.pdf' },
+                { title: 'Physics ST2', link: 'Physics st2.pdf' },
                 { title: 'Ecology ST1', link: 'Ecology st1.pdf' },
+                { title: 'Ecology ST2', link: 'Ecology st2.pdf' },
             ],
             // Add other semesters
         };
