--- a/index.html
+++ b/index.html
@@ -326,18 +326,23 @@
                { title: 'Mathematics II ST1', link: 'Math2 st1.pdf' },
                 { title: 'Mathematics II ST2', link: 'Math2 st2.pdf' },
                 { title: 'Mathematics II PUT', link: 'Math2 put.pdf' },
+                { title: 'Mathematics II UT', link: 'Math2 ut.pdf' },
                 { title: 'Electrical ST1', link: 'Electrical st1.pdf' },
                 { title: 'Electrical ST2', link: 'Electrical st2.pdf' },
                 { title: 'Electrical PUT', link: 'Electrical put.pdf' },
+                { title: 'Electrical UT', link: 'Electrical ut.pdf' },
                 { title: 'PPS ST1', link: 'pps st1.pdf' },
                 { title: 'PPS ST2', link: 'pps st2.pdf' },
                 { title: 'PPS PUT', link: 'pps put.pdf' },
+                { title: 'PPS UT', link: 'pps ut.pdf' },
                 { title: 'Physics ST1', link: 'Physics st1.pdf' },
                 { title: 'Physics ST2', link: 'Physics st2.pdf' },
                 { title: 'Physics PUT', link: 'Physics put.pdf' },
+                { title: 'Physics UT', link: 'Physics ut.pdf' },
                 { title: 'Ecology ST1', link: 'Ecology st1.pdf' },
                 { title: 'Ecology ST2', link: 'Ecology st2.pdf' },
                 { title: 'Ecology PUT', link: 'Ecology put.pdf' },
+                 { title: 'Ecology UT', link: 'Ecology ut.pdf' },
             ],
             // Add other semesters
         };
