--- a/index.html
+++ b/index.html
@@ -344,6 +344,14 @@
                 { title: 'Ecology PUT', link: 'Ecology put.pdf' },
                  { title: 'Ecology UT', link: 'Ecology ut.pdf' },
             ],
+           3: [
+              { title: 'Mathematics IV ST', link: 'Maths4 st.pdf' },
+              { title: 'Python Programming ST', link: 'Python st.pdf' },
+              { title: 'Human Values & Professional Ethics ST', link: 'UHV st.pdf' },
+              { title: 'Computer Organisation & Architecture ST', link: 'Coa st.pdf' },
+              { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
+              { title: 'Data Structure Using C ST', link: 'Datastructure st.pdf' },
+           ],
             // Add other semesters
         };
 
@@ -398,3 +406,4 @@
 </body>
 
 </html>
+
