Revamp index.html for Question Paper Management
Updated the HTML structure and styling for the Question Paper Management page, including a background video and improved layout.

--- a/index.html
+++ b/index.html
@@ -346,11 +346,17 @@
             ],
            3: [
               { title: 'Mathematics IV ST', link: 'Maths4 st.pdf' },
+               { title: 'Mathematics IV PUT', link: 'Math4 put.pdf' },
               { title: 'Python Programming ST', link: 'Python st.pdf' },
+               { title: 'Python Programming PUT', link: 'python put.pdf' },
               { title: 'Human Values & Professional Ethics ST', link: 'UHV st.pdf' },
+               { title: 'Human Values & Professional Ethics PUT', link: 'uhv put.pdf' },
               { title: 'Computer Organisation & Architecture ST', link: 'Coa st.pdf' },
+                { title: 'Computer Organisation & Architecture PUT', link: 'coa put.pdf' },
               { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
+               { title: 'Discrete Structures and Theory of Logic PUT', link: 'dstl put.pdf' },
               { title: 'Data Structure Using C ST', link: 'Datastructure st.pdf' },
+               { title: 'Data Structure Using C PUT', link: 'ds put.pdf' },
            ],
             // Add other semesters
         };
@@ -406,4 +412,5 @@
 </body>
 
 </html>
+
 
