--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
               { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
                { title: 'Discrete Structures and Theory of Logic PUT', link: 'dstl put.pdf' },
               { title: 'Data Structure Using C ST', link: 'Datastructure st.pdf' },
-               { title: 'Data Structure Using C PUT', link: 'ds put.pdf' },
+               { title: 'Data Structure Using C PUT', link: 'Datastructure put.pdf' },
            ],
             // Add other semesters
         };
@@ -412,6 +412,7 @@
 </body>
 
 </html>
+
 
 
 
