Refactor index.html for question paper management

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 { title: 'Computer Organisation & Architecture PUT', link: 'coa put.pdf' },
               { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
                { title: 'Discrete Structures and Theory of Logic PUT', link: 'dstl put.pdf' },
-               { title: 'Discrete Structures and Theory of Logic PUT', link: 'dstl ut.pdf' },
+               { title: 'Discrete Structures and Theory of Logic UT', link: 'dstl ut.pdf' },
               { title: 'Data Structure Using C ST', link: 'Datastructure st.pdf' },
                { title: 'Data Structure Using C PUT', link: 'Datastructure put.pdf' },
            ],
@@ -413,6 +413,7 @@
 </body>
 
 </html>
+
 
 
 
