Revamp Question Paper Management page layout
Updated the HTML structure and styles for the Question Paper Management page, including a background video and improved layout.

--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
                { title: 'Python Programming UT', link: 'Python ut.pdf' },
               { title: 'Human Values & Professional Ethics ST', link: 'UHV st.pdf' },
                { title: 'Human Values & Professional Ethics PUT', link: 'uhv put.pdf' },
+               { title: 'Human Values & Professional Ethics PUT', link: 'uhv ut.pdf' },
               { title: 'Computer Organisation & Architecture ST', link: 'Coa st.pdf' },
                 { title: 'Computer Organisation & Architecture PUT', link: 'coa put.pdf' },
               { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
@@ -359,6 +360,7 @@
                { title: 'Discrete Structures and Theory of Logic UT', link: 'dstl ut.pdf' },
               { title: 'Data Structure Using C ST', link: 'Datastructure st.pdf' },
                { title: 'Data Structure Using C PUT', link: 'Datastructure put.pdf' },
+               { title: 'Data Structure Using C UT', link: 'Datastructure ut.pdf' },
            ],
             // Add other semesters
         };
@@ -414,6 +416,7 @@
 </body>
 
 </html>
+
 
 
 
