Refactor index.html for question paper management

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
            3: [
               { title: 'Mathematics IV ST', link: 'Maths4 st.pdf' },
                { title: 'Mathematics IV PUT', link: 'Math4 put.pdf' },
+               { title: 'Mathematics IV UT', link: 'Math4 ut.pdf' },
               { title: 'Python Programming ST', link: 'Python st.pdf' },
                { title: 'Python Programming PUT', link: 'python put.pdf' },
                { title: 'Python Programming UT', link: 'Python ut.pdf' },
@@ -355,6 +356,7 @@
                { title: 'Human Values & Professional Ethics PUT', link: 'uhv ut.pdf' },
               { title: 'Computer Organisation & Architecture ST', link: 'Coa st.pdf' },
                 { title: 'Computer Organisation & Architecture PUT', link: 'coa put.pdf' },
+               { title: 'Computer Organisation & Architecture UT', link: 'Coa ut.pdf' },
               { title: 'Discrete Structures and Theory of Logic ST', link: 'Dstl st.pdf' },
                { title: 'Discrete Structures and Theory of Logic PUT', link: 'dstl put.pdf' },
                { title: 'Discrete Structures and Theory of Logic UT', link: 'dstl ut.pdf' },
@@ -416,6 +418,7 @@
 </body>
 
 </html>
+
 
 
 
